docs: 붕괴 순서를 조사로 검증 - 정정 3건 + 신규 1건
초안 5단계를 검증했더니 정정 3건과 신규 후보 1건이 나왔다.

## 정정 1 - "10초면 정리된다"가 틀렸다

checkSessionLimits() 의 sendTimeLimit(10초) 체크는 블로킹 중인 그 스레드
자신이 아니라, 나중에 같은 세션에 또 send 를 시도했다가 flushLock 을 못 잡은
"다른" 스레드에서만 실행된다.

  경쟁이 없으면      10초는 아예 발동하지 않는다
  실제 스레드 해제는  Tomcat DEFAULT_BLOCKING_SEND_TIMEOUT = 20,000ms

즉 경쟁 없는 느린 세션 1개당 스레드 점유는 최악 20초다. 10초가 아니다.

## 정정 2 - OOM 이 두 갈래다

  (a) 백로그형     큐에 태스크 누적        발행률 의존 (원안)
  (b) 유휴 연결형  연결당 heap 약 0.084MB  발행률 무관, 순수 인원수  <- 신규

(b)는 메시지를 하나도 안 보내도 연결만 1만 개면 OOM 이다. 2Core/2GB 단일 WAS
실측 사례가 있다. 이건 원안에 없던 별개 경로다.

## 신규 - Tomcat maxConnections 8192 하드월

실측 사례에서 8,000명째부터 진짜로 막혔고 max-connections: 11000 으로
올려서야 1만 명이 됐다. LimitLatch 가 소켓 accept~close 생명주기 단위로
카운트해서 WebSocket 업그레이드 후에도 슬롯을 점유한다.

그리고 ulimit -n 이 먼저 걸릴 수 있다. 관례 기본값 1024면 약 1,000명에서
Too many open files 다. 재현 시 반드시 확인하고 기록하기로 했다.

## 정정 3 - fan-out 이 비싼 정확한 이유

StompSubProtocolHandler.sendToClient() 가 구독자마다 stompEncoder.encode() 를
개별 호출한다. 구독자별 subscription-id 헤더가 달라 프레임 자체가 달라서
payload 캐싱이 안 된다.

## 실측 수치를 확보했다

  1,000명   평균 1.2s / 최대 4s 지연
  3,000명   평균 18s 지연 + 메시지 유실
  연결당 heap  약 0.084MB
  pool=50, 2,000 동시접속  "active=50, queued tasks=1471"

반례도 있다. SimpleBroker + inbound 풀 튜닝만으로 500~800명 안정(개인 프로젝트,
정성적 근거), WebFlux 단일 서버 5,000 VU 무오류(CPU 100%, 메모리 5GB, p99 1s).

우리 목표(화상강의 30~100, 라이브 수천)는 (2)의 실측 임계 근처다. 즉 채팅
자체는 안 무너지고 (1)이 먼저 올 가능성이 높다. 그게 결론이 될 수도 있고
그것도 결과다.

## 서사가 완성됐다

"인원"과 "부하"는 다른 축이고 둘 다 따로 재야 한다.

  인원 축   3(b) 유휴 연결 heap -> 4 8192 하드월 -> 5 단일 인스턴스
  부하 축   1 느린 클라 8명     -> 2 fan-out CPU -> 3(a) 백로그 OOM

WebSocketMessageBrokerStats 는 spring-websocket 모듈이고(spring-messaging 아님)
6.2 에서 API 가 개편됐다는 것도 정정했다.